--- a/app/src/main/res/drawable/rectangular_solid_light_blue.xml
+++ b/app/src/main/res/drawable/rectangular_solid_light_blue.xml
@@ -1,16 +1,13 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
     <!-- Main button -->
-    <item
-        android:bottom="5dp"
-        android:left="5dp"
-        android:right="5dp"
-        android:top="5dp">
+    <item android:top="5dp" android:left="5dp" android:right="5dp" android:bottom="5dp">
         <shape android:shape="rectangle">
             <corners android:radius="5dp" />
-            <solid android:color="@color/faintred" />
+            <solid android:color="#C9EBFF" />
         </shape>
     </item>
+
 
 
 </layer-list>
