--- a/app/src/main/res/layout/layout_getting_started.xml
+++ b/app/src/main/res/layout/layout_getting_started.xml
@@ -7,12 +7,12 @@
     android:orientation="vertical"
     android:background="@drawable/ic_new_bg_gradient">
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+<ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
         <ImageView
             android:src="@drawable/ic_new_bg_pattern"
             android:layout_width="match_parent"
@@ -25,9 +25,9 @@
             android:layout_width="138.88pt"
             android:paddingBottom="@dimen/dimen_20dp"
             android:layout_height="140dp"
-            android:layout_centerInParent="true"
             android:layout_alignParentTop="true"
-            android:layout_marginTop="70dp"/>
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="50dp"/>
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/layout_app_emaisha_pay"
@@ -69,7 +69,7 @@
             android:textColor="#fff"
             android:textSize="56sp"
             android:textStyle="bold"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="20dp"
             android:layout_marginStart="25dp"
             android:layout_marginEnd="25dp"
             android:layout_below="@id/layout_app_emaisha_pay"/>
@@ -122,7 +122,7 @@
                 android:layout_toEndOf="@id/signin1"/>
         </RelativeLayout>
     </RelativeLayout>
-    </ScrollView>
+</ScrollView>
 
 
 </RelativeLayout>
