Product Review avg rating

--- a/app/src/main/res/layout/fragment_product_rating_review.xml
+++ b/app/src/main/res/layout/fragment_product_rating_review.xml
@@ -112,7 +112,7 @@
                 android:background="@drawable/rounded_corners_button">
 
                 <androidx.appcompat.widget.AppCompatButton
-                    android:id="@+id/loginBtn"
+                    android:id="@+id/submitBtn"
                     android:layout_width="match_parent"
                     android:layout_height="40dip"
                     android:layout_gravity="center_vertical"
