--- a/app/src/main/res/layout/fragment_product_rating_review_list.xml
+++ b/app/src/main/res/layout/fragment_product_rating_review_list.xml
@@ -511,72 +511,16 @@
                     android:drawableEnd="@drawable/ic_baseline_arrow_drop_down_24"/>
 
             </LinearLayout>
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/layout2"
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/ratings_review_recycler"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:layout_marginStart="10dp"
-                android:layout_marginEnd="10dp"
-                android:layout_marginBottom="@dimen/dimen_20dp"
-                app:layout_constraintTop_toBottomOf="@id/filter_layout">
-                <RatingBar
-                    android:id="@+id/individual_rating"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:numStars="5"
-                    android:scaleY=".5"
-                    android:scaleX=".5"
-                    android:theme="@style/RatingBar"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"/>
-                <TextView
-                    android:id="@+id/rating_date"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
-                    android:text="July 24, 2020"
-                    android:textColor="#2D2D2D"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"/>
-                <TextView
-                    android:id="@+id/rating_person"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:text="Sserubiri Joseph"
-                    android:textSize="20sp"
-                    android:textColor="@color/colorPrimary"
-                    android:textStyle="bold"
-                    app:layout_constraintTop_toBottomOf="@id/rating_date"
-                    app:layout_constraintEnd_toEndOf="parent"/>
+                android:layout_margin="15dp"
+                app:layout_constraintTop_toBottomOf="@id/filter_layout"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
 
-                <TextView
-                    android:id="@+id/review_text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Lorem Ipsum is simply dummy text of the \n printing and typesetting"
-                    android:textColor="#95989A"
-                    app:layout_constraintTop_toBottomOf="@+id/rating_person"
-                    app:layout_constraintStart_toStartOf="parent" />
-                <TextView
-                    android:id="@+id/number_of_people"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
-                    android:text="0 People found this review helpful"
-                    android:textColor="#2D2D2D"
-                    app:layout_constraintTop_toBottomOf="@id/review_text"
-                    app:layout_constraintStart_toStartOf="parent"/>
-                <ImageView
-                    android:id="@+id/like"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    android:src="@drawable/ic_like"/>
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
             <FrameLayout
                 android:id="@+id/write_review_layout_button"
                 android:layout_width="match_parent"
