--- a/app/src/main/res/layout/rating_review_list_card.xml
+++ b/app/src/main/res/layout/rating_review_list_card.xml
@@ -20,6 +20,7 @@
             android:numStars="5"
             android:scaleX=".5"
             android:scaleY=".5"
+            android:isIndicator="true"
             android:theme="@style/RatingBar"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
